hotfix/#48: fix for deploy (#49)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - project/<< parameters.exec_directory >>
+            - project/terraform
 
   tf_deploy:
     executor: terraform
