--- a/google_cloud_functions/hello_world/policy.yml
+++ b/google_cloud_functions/hello_world/policy.yml
@@ -1,5 +1,6 @@
 bindings:
 - members:
   - user:hkak03key@gmail.com
+  - serviceAccount:gcf-hello-world-invoker@hotate-project-stg.iam.gserviceaccount.com
   role: roles/cloudfunctions.invoker
 
