--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,8 @@ commands:
       - run:
           name: create gcp credentials
           command: |
-            echo "<< parameters.cred_json >>" >> << parameters.cred_filepath >>
+            mkdir -p `dirname << parameters.cred_filepath >>` ; \
+              echo "<< parameters.cred_json >>" >> << parameters.cred_filepath >>
 
   init_gcloud:
     parameters:
@@ -118,6 +119,9 @@ jobs:
     steps:
       - checkout:
           path: project
+      - create_gcp_credentials_file:
+          cred_json: << parameters.cred_json >>
+          cred_filepath: ~/.config/gcloud/application_default_credentials.json
       - init_gcloud:
           cred_json: << parameters.cred_json >>
           project_id: << parameters.project_id >>
@@ -125,7 +129,7 @@ jobs:
           name: deploy
           command: |
             cd project
-            pip3 install pyyaml docopt
+            pip3 install pyyaml docopt google-auth
             find google_cloud_functions/ -maxdepth 1 -mindepth 1 -type d | xargs -I {} basename {} | uniq \
                 | xargs -I {} --no-run-if-empty bash -c 'echo "deploy {}..." && ./scripts/deploy_gcf.py -c google_cloud_functions/{}/config.yml -p google_cloud_functions/{}/policy.yml'
             git diff HEAD^ --name-only --relative=google_cloud_functions --diff-filter=D -M100 | sed -r 's#/.*##g'| uniq | sort \
