--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,10 +131,10 @@ jobs:
             cd project
             pip3 install pyyaml docopt google-auth
             find google_cloud_functions/ -maxdepth 1 -mindepth 1 -type d | xargs -I {} basename {} | uniq \
-                | xargs -I {} --no-run-if-empty bash -c 'echo "deploy {}..." && ./scripts/deploy_gcf.py -c google_cloud_functions/{}/config.yml -p google_cloud_functions/{}/policy.yml'
+                | xargs -L 1 -P 8 -I {} --no-run-if-empty bash -c 'echo "deploy {}..." && ./scripts/deploy_gcf.py -c google_cloud_functions/{}/config.yml -p google_cloud_functions/{}/policy.yml'
             git diff HEAD^ --name-only --relative=google_cloud_functions --diff-filter=D -M100 | sed -r 's#/.*##g'| uniq | sort \
                 | join <(gcloud functions list | awk -F "  " '{print $1, "--region", $4}' | tail -1 | sort) - \
-                | xargs -I {} --no-run-if-empty bash -c 'echo "delete {}..." && gcloud functions delete {}'
+                | xargs -L 1 -P 8 -I {} --no-run-if-empty bash -c 'echo "delete {}..." && gcloud functions delete {}'
 
 #----------------------------------------
 workflows:
